--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no"> 
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no,initial-scale=1, maximum-scale=1, user-scalable=no,width=device-width"> 
     <title>app</title>
   </head>
   <body>
